add video background

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,62 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+body {
+  color: rgb(55, 52, 221) !important;
+  font-family: 'Lobster', cursive !important;
+}
+
+#wrap {
+  margin-top: 5%;
+}
+
+#info {
+  background-color: rgba(204, 204, 198, 0.85);
+  height: 500px;
+  width: 500px;
+  padding-top: 20px;
+  border-radius: 20px;
+}
+
+
+.info-button {
+  margin: 30px 10px;
+}
+
+#form {
+  background-color: rgba(212, 212, 185, 0.85);
+  height: 500px;
+  width: 500px;
+  padding-top: 20px;
+  border-radius: 20px;
+  font-size: 1.5em;
+}
 input[type="text"] {
   background-color: transparent;
   border: 0;
   border-bottom: solid 2px #113a65;
-  width: 50%;
+  width: 60%;
   padding-bottom: 4px;
-  font-weight: lighter;
   margin-bottom: 30px;
   margin-right: 20px;
   font-size: 20px;
   outline: none;
+}
+
+@media(max-width: 500px) {
+  input[type="text"] {
+    width: 80%;
+  }
+}
+
+video {
+  background-attachment: fixed;
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  z-index: -10;
 }
