--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,20 @@
 body {
   color: rgb(55, 52, 221) !important;
   font-family: 'Lobster', cursive !important;
+  background-attachment: fixed;
+  background-image: url(./img/background.jpg);
 }
 
 #wrap {
-  margin-top: 5%;
+  margin-top: 100px;
 }
 
 #info {
-  background-color: rgba(204, 204, 198, 0.85);
-  height: 500px;
-  width: 500px;
+  background-color: rgba(196, 193, 223, 0.8);
+  height: 600px;
   padding-top: 20px;
   border-radius: 20px;
+  box-shadow: 7px 7px 10px rgba(0,0,0,0.5);
 }
 
 
@@ -27,15 +29,15 @@ body {
 }
 
 #form {
-  background-color: rgba(212, 212, 185, 0.85);
-  height: 500px;
-  width: 500px;
+  background-color: rgba(153, 165, 202, 0.8);
+  height: 600px;
   padding-top: 20px;
   border-radius: 20px;
   font-size: 1.5em;
+  box-shadow: 7px 7px 10px rgba(0,0,0,0.5);
 }
 input[type="text"] {
-  background-color: transparent;
+  background-color: transparent !important;
   border: 0;
   border-bottom: solid 2px #113a65;
   width: 60%;
@@ -49,6 +51,18 @@ input[type="text"] {
 @media(max-width: 500px) {
   input[type="text"] {
     width: 80%;
+  }
+
+  #info {
+    height: 350px;
+  }
+
+  #wrap {
+    margin-top: 0px;
+  }
+
+  #info, #form {
+    margin: 10px;
   }
 }
 
